change in style of buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <form class="toDoInput">
         <input
           type="text"
-          placeholder="ENTER YOUR TO-DO LIST TASK "
+          placeholder="ENTER YOUR ** TO-DO ** LIST TASK , SELECT  ** DATE ** AND  ** PRIORITY ** "
           name="content" />
         <input type="date" id="dateInput" required name="date" />
 
